chore: fixing a small typo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -211,7 +211,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('/Users/ruariwalker/Documents/Qonto_Documents/qonto_repos/ds-sandbox/ruari/mmm_demo/dt_simulated_weekly.csv', parse_dates = ['date'])\n",
+    "df = pd.read_csv('dt_simulated_weekly.csv', parse_dates = ['date'])\n",
     "df.head()"
    ]
   },
