chore: removing var_names argument

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1434,10 +1434,7 @@
     "               )\n",
     "    # Get the predictions using training MMM trace / idata\n",
     "    # i.e. the trace we had created earlier with training data\n",
-    "    test_mmm_posterior_predictive = pm.sample_posterior_predictive(trace, random_seed = rng, var_names=[\"y_obs\", \"organic_contributions\", \"competitor_contributions\",\n",
-    "                                                                                                        \"paid_adstock_saturated\", \"paid_contributions\", \"control_contributions\",\n",
-    "                                                                                                        \"trend\", \"seasonality\", \"geoad_param_paid\", \"sat_lam\", \"paid_adstock\", \n",
-    "                                                                                                        \"paid_adstock_saturated\", \"organic_adstock\"])"
+    "    test_mmm_posterior_predictive = pm.sample_posterior_predictive(trace, random_seed = rng)"
    ]
   },
   {
